[package]
name = "zenohbench"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "*"
zenoh = "1.1.1"
tokio = { version = "1", features = ["full"] }
thrift = "*"

[[bin]]
name = "bench"
path = "src/main.rs"

[[bin]]
name = "mpclient"
path = "src/mpclient.rs"

[[bin]]
name = "mpsink"
path = "src/mpsink.rs"

[[bin]]
name = "mprelay"
path = "src/mprelay.rs"